--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,16 +42,17 @@
 				</div>
 				<div class="col-12 col-md mb-3">
 					<label for="rating">Rating</label>
-					<input type="number" name="rating" id="rating" required class="form-control">
+					<input type="number" name="rating" id="rating" min="1" max="10" required class="form-control">
 				</div>
 				<div class="mb-3">
 					<label for="link">Link</label>
-					<input type="url" name="link" id="link" required class="form-control">
+					<input type="text" name="link" id="link" required class="form-control">
 				</div>
 				<div class="mb-3">
 					<label for="notes">Notes</label>
 					<textarea name="notes" id="notes" class="form-control"></textarea>
 				</div>
+				<button type="submit" class="btn btn-primary mb-3">Create New Problem Card</button>
 		</form>
 	</div>
 </body>
